--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,16 +5,16 @@
 # prevent it from being included in the site.
 
 main:
-  - title: "发表"
+  - title: "成果发表"
     url: /publications/
 
   - title: "Talks"
     url: /talks/    
 
-  - title: "Teaching"
+  - title: "教学"
     url: /teaching/    
     
-  - title: "Portfolio"
+  - title: "成员"
     url: /portfolio/
         
   - title: "团队活动"
