--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title                    : "SZPU/ PAMI"
 title_separator          : "-"
 name                     : &name "Your Name"
 description              : &description "personal description"
-url                      : https://shaojiwan.github.io/academic.com/
+url                      : https://shaojiwan.github.io/
                             #https://shaojiwan.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
