--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 locale                   : "en-US"
 title                    : "SZPU/ PAMI"
 title_separator          : "-"
-name                     : &name "Your Name"
+name                     : &name "PAMI"
 description              : &description "personal description"
 url                      : https://shaojiwan.github.io/
                             #https://shaojiwan.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
@@ -33,12 +33,12 @@ author:
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  googlescholar    : "https://scholar.google.com/citations?user=dCcnFn4AAAAJ&hl=zh-CN"
   impactstory      : # URL
-  orcid            : "http://orcid.org/yourorcidurl"
+  orcid            : "https://orcid.org/my-orcid?orcid=0000-0002-2475-9156"
   semantic         : # URL
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  researchgate     : # URL
+  researchgate     : "https://www.researchgate.net/profile/Qingtian-Wu"# URL
 
   # Repositories and software development
   bitbucket        : # Username - Update with your username on the site
